also fixed layout issue in account page

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -47,7 +47,7 @@
     border-color: #e78011;
     color: white;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin: 1% 0 1% 0;
 }
 
 /*
@@ -79,6 +79,14 @@
     This pushes the phone number down a little bit, so that it's centered.
 */
 #account_container .phone-number{
-   position: relative;
-    top: 12px;
+    position: relative;
+    bottom: 10px;
+}
+
+/*
+    This pushes the phone number down a little bit, so that it's centered.
+*/
+#account_container .dob{
+    position: relative;
+    top: 10px;
 }
